--- a/package.json
+++ b/package.json
@@ -18,13 +18,8 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": ">=5.31.0",
-    "@typescript-eslint/parser": ">=5.31.0",
     "@vitejs/plugin-react": "^2.1.0",
-    "eslint": ">=8.0.0",
-    "eslint-config-xo": "^0.42.0",
-    "eslint-config-xo-typescript": "^0.53.0",
-    "eslint-plugin-react": "^7.31.8",
+    "prettier": "2.7.1",
     "typescript": ">=4.4",
     "vite": "^3.1.0"
   },
