--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write src/**/*.{ts,tsx,scss,md,json} --config ./.prettierrc.json"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.5",
-    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "cloudpayments": "^6.0.1",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.3",
+    "sass": "^1.56.0",
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
