--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-router-dom": "^6.4.3",
+    "react-slideshow-image": "^4.1.1",
     "sass": "^1.56.0",
     "vite-plugin-svgr": "^2.2.2"
   },
