Ваня попросил запушить

--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.5",
+    "antd": "^5.5.1",
     "ky": "^0.32.2",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-router-dom": "^6.4.3",
-    "react-slideshow-image": "^4.1.1",
     "sass": "^1.56.0",
     "vite-plugin-svgr": "^2.2.2"
   },
