--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.5",
     "antd": "^5.5.1",
+    "js-cookie": "^3.0.5",
     "ky": "^0.32.2",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
@@ -25,6 +26,7 @@
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
